# sumeru_py

./: .gitignore  README.md  pyproject.toml
sumeru_py/api/tongyi/: agent.py  asr_model.py  asr_srv.py  audio_manager.py  llm_srv.py  srv_pusher.py  tts_srv.py
sumeru_py/cam/: cam2dthread.py  util.py
sumeru_py/core/: log.py  util.py
sumeru_py/cvx/: yolo.py
sumeru_py/robot/: dataloader.py  visualizer.py
test/: test_cam.py  test_robot.py
tools/custom_rlds_builder/: README.md  custom_ds_builder.py  simple_2_hdf5.py
tools/fr3_moveit/: README.md
tools/fr3_moveit/fr_test/: CMakeLists.txt  package.xml  setup.py
tools/fr3_moveit/fr_test/launch/: move_to_start.launch
tools/fr3_moveit/fr_test/scripts/: fr3_move_franka_v3.py  infer_node.py  move_to_start.py  record.txt  test.py
tools/fr3_moveit/fr_test/src/: setup.py
tools/fr3_moveit/fr_test/src/franka_ctl/: franka_ctl.py  gripper_ctl.py
tools/fr3_moveit/franka_gripper/: CMakeLists.txt  package.xml
tools/fr3_moveit/franka_gripper/include/franka_gripper/: franka_gripper.h
tools/fr3_moveit/franka_gripper/src/: franka_gripper.cpp  franka_gripper_node.cpp
tools/fr3_moveit/franka_msgs/: package.xml
