[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sumeru_py"
version = "0.0.1"
authors = [{name = "martin", email = "balabala@outlook.com"}]
description = "Your package description"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
